ipc/ipdl/test/ipdl/ok/Pnamespace_Basic.ipdl
namespace basic {

// sanity check of namespaced protocols

protocol Pnamespace_Basic {

child:
    async Msg();

};

} // namespace basic
